--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
-    "mongoose": "^6.7.1"
+    "mongodb": "^6.3.0",
+    "mongoose": "^6.12.3"
   }
 }
